# fragsynth

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
fragsynth/core/: __init__.py  attachment_points.py  classification.py  fragmentation.py  models.py  recombination.py  standardization.py  validation.py
fragsynth/data/: load.py
fragsynth/utils/: rdkit_utils.py
scripts/: build_fragment_library.py  build_molecule_library.py
